journey-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journey-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: journey-api
      app.kubernetes.io/instance: zde
  template:
    metadata:
      labels:
        app.kubernetes.io/name: journey-api
        app.kubernetes.io/instance: zde
    spec:
      serviceAccountName: zde-service
      containers:
      - image: "492071692632.dkr.ecr.eu-west-2.amazonaws.com/zde/journey-api:1.0.42-master"
        imagePullPolicy: Always
        name: journey-api
        ports:
          - containerPort: 80
        env:
          - name: ASPNETCORE_ENVIRONMENT
            value: dev
          - name: Logging__LogLevel__Default
            value: Debug
---
apiVersion: v1
kind: Service
metadata:
  name: journey-api
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: journey-api
    app.kubernetes.io/instance: zde
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: journey-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  tls:
    - secretName: zde-tls-secret
      hosts: 
        - journey-api.dev.zde.jaja.co.uk
  rules:
  - host: journey-api.dev.zde.jaja.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: journey-api
          servicePort: 80
