service.journey.generic.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"journey-generic","namespace":"venus"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app.kubernetes.io/instance":"zde","app.kubernetes.io/name":"journey-generic"}}}
  creationTimestamp: "2021-03-10T08:55:01Z"
  name: journey-generic
  namespace: venus
  resourceVersion: "137413274"
  selfLink: /api/v1/namespaces/venus/services/journey-generic
  uid: f716ab2b-f4c9-4109-a520-e307960cd2c0
spec:
  clusterIP: 172.20.10.251
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: zde
    app.kubernetes.io/name: journey-generic
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
