zde-venus-pagebuilder.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    meta.helm.sh/release-name: zde-venus
    meta.helm.sh/release-namespace: venus
  creationTimestamp: "2021-08-31T05:00:13Z"
  generation: 2
  labels:
    app.kubernetes.io/component: pagebuilder
    app.kubernetes.io/instance: zde-venus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zde-pagebuilder
    app.kubernetes.io/part-of: de
    app.kubernetes.io/version: "4.0"
    helm.sh/chart: zde-4.0.3495
  name: zde-venus-pagebuilder
  namespace: venus
  resourceVersion: "215849509"
  selfLink: /apis/apps/v1/namespaces/venus/deployments/zde-venus-pagebuilder
  uid: c66822b2-375c-4e7c-8567-e895dbe70058
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: zde-venus
      app.kubernetes.io/name: zde-pagebuilder
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/service: ec3e3a3b86e5e4ae765fa81d86fc2437242411e42cee7a49eb754fb2c5fb315e
        prometheus.io/port: "80"
        prometheus.io/scrape: "false"
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: pagebuilder
        app.kubernetes.io/instance: zde-venus
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: zde-pagebuilder
        app.kubernetes.io/part-of: de
        app.kubernetes.io/version: "4.0"
        helm.sh/chart: zde-4.0.3495
    spec:
      containers:
      - env:
        - name: ZDE_POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: zoralft/generic-zdj-page-builder:0.0.8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: pagebuilder
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: zde-service
      serviceAccountName: zde-service
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-08-31T05:02:25Z"
    lastUpdateTime: "2021-08-31T05:02:25Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-08-31T05:00:16Z"
    lastUpdateTime: "2021-08-31T13:41:46Z"
    message: ReplicaSet "zde-venus-pagebuilder-5744748f56" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
