zde-venus-pagebuilder.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: zde-venus
    meta.helm.sh/release-namespace: venus
  creationTimestamp: "2021-08-31T05:00:13Z"
  labels:
    app.kubernetes.io/component: pagebuilder
    app.kubernetes.io/instance: zde-venus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zde-pagebuilder
    app.kubernetes.io/part-of: de
    app.kubernetes.io/version: "4.0"
    helm.sh/chart: zde-4.0.3495
  name: zde-venus-pagebuilder
  namespace: venus
  resourceVersion: "215847966"
  selfLink: /api/v1/namespaces/venus/services/zde-venus-pagebuilder
  uid: d17a5e7b-de19-4f7a-9582-cfc7bc79f5d0
spec:
  clusterIP: 172.20.5.61
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: zde-venus
    app.kubernetes.io/name: zde-pagebuilder
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
